working on account nomen (4 and 5 class)

--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -63,6 +63,7 @@ jpn:
         # fr_pcg82: "Plan comptable général de 1982 - Arrêté du 14/12/2007"
         # fr_pcga: "Plan comptable agricole - Arrêté du 11/12/1986"
       items:
+        # accrued_bank_interests: "Intérêts courus"
         # accrued_interest: "Intérêts courus"
         # accrued_interests_on_bank: "Intérêts courus auprès des établissements de crédit"
         # adult_animal_asset: "Animaux reproducteurs (adulte)"
@@ -75,11 +76,18 @@ jpn:
         # animal_reproduction_stock: "Stock de produits de reproduction animale"
         # asset_depreciations: "Ammortissements"
         # assets: "Comptes d'immobilisations"
+        # assets_suppliers: "Fournisseurs d'immobilisations"
+        # attorney: "Autres comptes debiteurs ou crediteurs"
         # biocorporeal_asset_depreciations: "Ammortissements des biens vivants"
         # building_asset: "Bâtiments"
         # capital: "Capital"
+        # cash: "Caisse"
+        # clients: "Clients"
+        # collected_taxes: "Taxes sur le chiffre d'affaires collectées par l'entreprise"
+        # compensation_operations: "Operations de compensation (conventions de compte courant)"
         # cooperative_participation_asset: "Sociétés coopératives agricoles (sauf CUMA)"
         # corporeal_asset_depreciations: "Ammortissements des immobilisations corporelles"
+        # debtors_suppliers: "Fournisseurs debiteurs"
         # end_products_stock: "Stock de produits finis"
         # equipment_asset: "Matériels"
         # equipment_asset_depreciations: "Ammortissements des installations techniques, matériels et outillage"
@@ -99,6 +107,7 @@ jpn:
         # initial_individual_capital: "Capital individuel initial"
         # initial_individual_capital_variations: "Variation du capital individuel initial"
         # installation_sustainable_plant_asset: "Aménagements des plantations pérennes"
+        # internal_transfer: "Virement interne"
         # land_loans: "Emprunts fonciers"
         # land_parcel_asset: "Terrains nus"
         # land_parcel_asset_depreciations: "Ammortissements des terrains de gisement"
@@ -106,6 +115,7 @@ jpn:
         # land_parcel_sell_product: "Immobilisations corporelles (hors biens vivants)"
         # legal_reserves: "Réserve légale"
         # livestock_feed_stock: "Stock d'aliment du bétail"
+        # locked_associated_accounts: "Associes comptes courants - comptes bloqués"
         # long_cycle_cultures_advances: "Avances aux cultures (cycle long)"
         # long_term_loans: "Emprunts à moyen et long terme"
         # long_time_animal_stock: "Animaux (cycle long)"
@@ -128,9 +138,11 @@ jpn:
         # own_building_asset_depreciations: "Ammortissements des constructions sur sol propre"
         # ownership_asset: "Titres immobilisés (droits de propriété)"
         # ownership_loan: "Prêts consentis"
+        # paid_taxes: "Taxes sur le chiffre d'affaires deductibles"
         # plant_derivative_stock: "Stock de produits finis végétaux"
         # plant_derivatives_product: "Vente de produits végétaux"
         # plant_medicine_stock: "Stock de produits de défense des végétaux"
+        # principal_associated_accounts: "Associes comptes courants - principal"
         # professional_agricultural_organization_asset: "Participations à des organismes professionnels agricoles"
         # raw_material_charge: "Matières premières"
         # reevaluation_gaps: "Ecart de réévaluation"
@@ -146,15 +158,25 @@ jpn:
         # short_term_loans: "Emprunts à court terme"
         # short_time_animal_stock: "Animaux (cycle court)"
         # short_time_plant_crop_variation: "Végétaux en terre (cycle court)"
+        # social_agricultural_mutuality: "Mutualité Sociale Agricole"
+        # staff_due_remunerations: "Personnel - rémunérations dûes"
+        # state_taxes: "Etat - Taxes sur le chiffre d'affaire"
         # stocks: "Comptes de stocks et en-cours"
+        # suppliers: "Fournisseurs"
+        # suppliers_balance_after_compensation: "Fournisseurs d'exploitation - soldes apres compensation"
+        # suppliers_invoices_not_received: "Fournisseurs - factures non parvenues"
         # sustainable_packaging_asset: "Emballages récupérables"
         # sustainable_packaging_asset_depreciations: "Ammortissements des emballages réutilisables"
         # sustainables_plants_asset: "Plantations pérennes"
         # sustainables_plants_asset_depreciations: "Ammortissements des plantations pérennes"
         # sustainables_plants_on_other_landparcel_asset: "Plantations pérennes sur sol d'autrui"
         # sustainables_plants_on_own_landparcel_asset: "Plantations pérennes sur sol propre"
+        # third_party: "Compte de tiers"
         # transport_vehicle_asset: "Matériel de transport"
         # transport_vehicle_asset_depreciations: "Ammortissements des véhicules de transport"
+        # usual_associated_accounts: "Associes comptes courants - comptes courants"
+        # usual_bank_overdraft: "Concours bancaires courants"
+        # waiting_taxes: "Taxes sur le chiffres d'affaires à régulariser ou en attente"
         # young_animal_asset: "Animaux reproducteurs (jeunes de renouvellement)"
         # young_animal_charge: "Animaux reproducteurs (jeunes de renouvellement)"
         # young_animal_product: "Animaux reproducteurs (jeunes de renouvellement)"
