--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -68,18 +68,23 @@ arb:
         # accrued_interests_on_bank: "Intérêts courus auprès des établissements de crédit"
         # adult_animal_asset: "Animaux reproducteurs (adulte)"
         # adult_animal_asset_depreciations: "Ammortissements des animaux reproducteurs"
-        # adult_animal_charge: "Animaux reproducteurs (adultes)"
-        # adult_animal_product: "Animaux reproducteurs (adultes)"
+        # adult_animal_charges: "Animaux reproducteurs (adultes)"
+        # adult_animal_products: "Animaux reproducteurs (adultes)"
         # animal_derivative_stock: "Produits finis animaux"
         # animal_derivatives_product: "Vente de produits animaux"
         # animal_medicine_stock: "Stock de produits de défense des animaux"
         # animal_reproduction_stock: "Stock de produits de reproduction animale"
+        # animals_productions_charges: "Achats pour productions animales"
         # asset_depreciations: "Ammortissements"
         # assets: "Comptes d'immobilisations"
         # assets_suppliers: "Fournisseurs d'immobilisations"
+        # assets_values: "Valeurs comptables des élèments d'actif cédés "
+        # associates_salary: "Rémunérations (administrateurs, gérants, associés)"
         # attorney: "Autres comptes debiteurs ou crediteurs"
+        # banks_services_charges: "Services bancaires"
         # biocorporeal_asset_depreciations: "Ammortissements des biens vivants"
         # building_asset: "Bâtiments"
+        # campaigns_interests: "Crédits des crédits bancaires de campagne"
         # capital: "Capital"
         # cash: "Caisse"
         # clients: "Clients"
@@ -87,19 +92,26 @@ arb:
         # compensation_operations: "Operations de compensation (conventions de compte courant)"
         # cooperative_participation_asset: "Sociétés coopératives agricoles (sauf CUMA)"
         # corporeal_asset_depreciations: "Ammortissements des immobilisations corporelles"
+        # corporeals_and_incorporeals_depreciations_inputations_charges: "Dotat. aux amort. des immobilisations incorporelles et corporelles"
         # debtors_suppliers: "Fournisseurs debiteurs"
+        # depreciations_inputations_charges: "Dotations aux amortissements et aux provisions"
+        # electricity_charges: "Electricité"
         # end_products_stock: "Stock de produits finis"
         # equipment_asset: "Matériels"
         # equipment_asset_depreciations: "Ammortissements des installations techniques, matériels et outillage"
+        # equipment_charges: "Installations techniques, matériel et outillage"
         # equipment_cooperative_participation_asset: "CUMA"
-        # equipment_rent_charge: "Location de matériel"
+        # equipment_rent_charges: "Location de matériel"
         # equipment_subventions: "Subventions d'équipement"
+        # external_staff_charges: "Personnel exterieur a l'entreprise"
         # fertilizer_stock: "Stock d'engrais et amendements"
         # financial_year_result: "Résultat de l'exercice"
         # financial_year_result_balance: "Résultat de l'exercice (bénéfice ou perte)"
         # financial_year_result_loss: "Résultat de l'exercice (perte)"
         # financial_year_result_profit: "Résultat de l'exercice (bénéfice)"
         # fuel_stock: "Stock de carburants et lubrifiants"
+        # fuels_charges: "Carburants et lubrifiants"
+        # gas_charges: "Gaz"
         # general_installation_asset: "Installations générales"
         # general_installation_asset_depreciations: "Ammortissements des installations"
         # incorporeal_asset_depreciations: "Ammortissements des immobilisations incorporelles"
@@ -107,44 +119,60 @@ arb:
         # initial_individual_capital: "Capital individuel initial"
         # initial_individual_capital_variations: "Variation du capital individuel initial"
         # installation_sustainable_plant_asset: "Aménagements des plantations pérennes"
+        # insurance_charges: "Primes d'assurance"
         # internal_transfer: "Virement interne"
         # land_loans: "Emprunts fonciers"
+        # land_loans_interests: "Intérêts des emprunts fonciers"
         # land_parcel_asset: "Terrains nus"
         # land_parcel_asset_depreciations: "Ammortissements des terrains de gisement"
-        # land_parcel_rent_charge: "Fermages et loyers du foncier"
-        # land_parcel_sell_product: "Immobilisations corporelles (hors biens vivants)"
+        # land_parcel_rent_charges: "Fermages et loyers du foncier"
+        # land_parcel_sell_products: "Immobilisations corporelles (hors biens vivants)"
         # legal_reserves: "Réserve légale"
+        # little_office_equipment_charges: "Fournitures d'entretien et de petits equipements"
         # livestock_feed_stock: "Stock d'aliment du bétail"
         # locked_associated_accounts: "Associes comptes courants - comptes bloqués"
         # long_cycle_cultures_advances: "Avances aux cultures (cycle long)"
         # long_term_loans: "Emprunts à moyen et long terme"
+        # long_term_loans_interests: "Intérêts des autres emprunts à moyen et long terme"
         # long_time_animal_stock: "Animaux (cycle long)"
+        # mails_charges: "Frais postaux et de télécommunications"
         # maintenances_consumables_stock: "Stock de produits d'entretien"
         # office_equipment_asset: "Matériel de bureau et informatique"
         # office_equipment_asset_depreciations: "Ammortissements des équipements de bureau"
         # office_furniture_asset: "Mobilier"
         # office_furniture_asset_depreciations: "Ammortissements du mobilier"
-        # other_animal_charge: "Autres animaux"
-        # other_animal_product: "Autres animaux"
+        # other_animal_charges: "Autres animaux"
+        # other_animal_products: "Autres animaux"
         # other_building_asset_depreciations: "Ammortissements des constructions sur sol d'autrui"
+        # other_building_charges: "Constructions (sur sol d'autrui)"
+        # other_fees_charges: "Autres honoraires"
+        # other_supply_stocks_variation: "Variation des stocks autres approvisionnements"
         # others_asset: "Autres immobilisations"
         # others_asset_depreciations: "Ammortissements des autres immobilisations"
+        # others_charges: "Divers"
         # others_consumables_stock: "Stock d'autres consommables"
         # others_incorporeal_asset: "Autres immobilisations incorporelles (Droits de plantation, Quotas)"
         # others_incorporeal_asset_depreciations: "Autres immobilisations incorporelles"
+        # others_interests_charges: "Autres charges d'intérêts"
         # others_professional_agricultural_participation_asset: "Autres participations à des OPA"
         # others_reserves: "Autres réserves"
+        # others_staff_charges: "Autres Charges de personnel"
         # others_subventions: "Autres subventions d'investissement"
+        # others_taxes: "Autres impôts, taxes et versements assimilés"
+        # others_usual_running_charges: "Charges diverses de gestion courante"
         # own_building_asset_depreciations: "Ammortissements des constructions sur sol propre"
+        # own_building_charges: "Constructions (sur sol propre)"
         # ownership_asset: "Titres immobilisés (droits de propriété)"
         # ownership_loan: "Prêts consentis"
         # paid_taxes: "Taxes sur le chiffre d'affaires deductibles"
         # plant_derivative_stock: "Stock de produits finis végétaux"
-        # plant_derivatives_product: "Vente de produits végétaux"
+        # plant_derivatives_products: "Vente de produits végétaux"
         # plant_medicine_stock: "Stock de produits de défense des végétaux"
         # principal_associated_accounts: "Associes comptes courants - principal"
+        # products_specials_taxes: "Taxes spécifiques sur les produits de l'exploitation"
         # professional_agricultural_organization_asset: "Participations à des organismes professionnels agricoles"
-        # raw_material_charge: "Matières premières"
+        # professionnals_subscriptions_charges: "Cotisations professionnelles"
+        # raw_material_charges: "Matières premières"
         # reevaluation_gaps: "Ecart de réévaluation"
         # reserves: "Réserves"
         # seed_stock: "Stock de semences et plants"
@@ -156,15 +184,21 @@ arb:
         # short_cycle_cultures_advances_plants_medicines: "Avances aux cultures (cycle court) - Produits de défense des végétaux"
         # short_cycle_cultures_advances_seeds: "Avances aux cultures (cycle court) - Semences et plants"
         # short_term_loans: "Emprunts à court terme"
+        # short_term_loans_interests: "Intérêts des emprunts à court terme"
         # short_time_animal_stock: "Animaux (cycle court)"
         # short_time_plant_crop_variation: "Végétaux en terre (cycle court)"
         # social_agricultural_mutuality: "Mutualité Sociale Agricole"
+        # staff_charges: "Charges de personnel"
         # staff_due_remunerations: "Personnel - rémunérations dûes"
+        # staff_salary: "Salaires"
         # state_taxes: "Etat - Taxes sur le chiffre d'affaire"
         # stocks: "Comptes de stocks et en-cours"
+        # stocks_variation: "Variation de stocks"
+        # studies_and_research_charges: "Etudes et recherches"
         # suppliers: "Fournisseurs"
         # suppliers_balance_after_compensation: "Fournisseurs d'exploitation - soldes apres compensation"
         # suppliers_invoices_not_received: "Fournisseurs - factures non parvenues"
+        # supply_stocks_variation: "Variation de stocks d'approvisonnements"
         # sustainable_packaging_asset: "Emballages récupérables"
         # sustainable_packaging_asset_depreciations: "Ammortissements des emballages réutilisables"
         # sustainables_plants_asset: "Plantations pérennes"
@@ -176,10 +210,13 @@ arb:
         # transport_vehicle_asset_depreciations: "Ammortissements des véhicules de transport"
         # usual_associated_accounts: "Associes comptes courants - comptes courants"
         # usual_bank_overdraft: "Concours bancaires courants"
+        # vegetals_productions_charges: "Achats pour productions végétales"
+        # veterinary_fees_charges: "Honoraires veterinaires"
         # waiting_taxes: "Taxes sur le chiffres d'affaires à régulariser ou en attente"
+        # water_charges: "Eau"
         # young_animal_asset: "Animaux reproducteurs (jeunes de renouvellement)"
-        # young_animal_charge: "Animaux reproducteurs (jeunes de renouvellement)"
-        # young_animal_product: "Animaux reproducteurs (jeunes de renouvellement)"
+        # young_animal_charges: "Animaux reproducteurs (jeunes de renouvellement)"
+        # young_animal_products: "Animaux reproducteurs (jeunes de renouvellement)"
       # name: "Code comptable"
     entity_natures:
       items:
