--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -72,6 +72,7 @@ eng:
         # adult_animal_charges: "Animaux reproducteurs (adultes)"
         adult_animal_product: "Adult animal product" #?
         # adult_animal_products: "Animaux reproducteurs (adultes)"
+        # agricultural_disasters_compensations: "Indémnités du fonds national de garantie des calamités agricoles"
         animal_derivative_stock: "Animal derivative stock"
         animal_derivatives_product: "Animal derivatives product"
         # animal_medicine_stock: "Stock de produits de défense des animaux"
@@ -97,6 +98,7 @@ eng:
         # corporeals_and_incorporeals_depreciations_inputations_charges: "Dotat. aux amort. des immobilisations incorporelles et corporelles"
         # debtors_suppliers: "Fournisseurs debiteurs"
         # depreciations_inputations_charges: "Dotations aux amortissements et aux provisions"
+        # discount_from_cooperatives: "Ristournes percues des cooperatives agricoles"
         # electricity_charges: "Electricité"
         # end_products_stock: "Stock de produits finis"
         equipment_asset: "Equipment asset"
@@ -106,17 +108,22 @@ eng:
         equipment_rent_charge: "Equipment rent charge" #?
         # equipment_rent_charges: "Location de matériel"
         # equipment_subventions: "Subventions d'équipement"
+        # exploitation_charges_transfers: "Transferts de charges d'exploitation"
+        # exploitation_subsidies_and_compensations: "Indémnités et subventions d'exploitation"
         # external_staff_charges: "Personnel exterieur a l'entreprise"
         # fertilizer_stock: "Stock d'engrais et amendements"
+        # fill_up_price_products: "Compléments de prix et primes sur produits vendus"
         # financial_year_result: "Résultat de l'exercice"
         # financial_year_result_balance: "Résultat de l'exercice (bénéfice ou perte)"
         # financial_year_result_loss: "Résultat de l'exercice (perte)"
         # financial_year_result_profit: "Résultat de l'exercice (bénéfice)"
+        # financials_products: "Produits financiers"
         # fuel_stock: "Stock de carburants et lubrifiants"
         # fuels_charges: "Carburants et lubrifiants"
         # gas_charges: "Gaz"
         # general_installation_asset: "Installations générales"
         # general_installation_asset_depreciations: "Ammortissements des installations"
+        # home_consumption_production: "Production autoconsommée"
         # incorporeal_asset_depreciations: "Ammortissements des immobilisations incorporelles"
         # industrial_cooperative_participation_asset: "SICA"
         # initial_individual_capital: "Capital individuel initial"
@@ -124,6 +131,7 @@ eng:
         # installation_sustainable_plant_asset: "Aménagements des plantations pérennes"
         # insurance_charges: "Primes d'assurance"
         # internal_transfer: "Virement interne"
+        # inventory_variations: "Variations d'inventaires"
         # land_loans: "Emprunts fonciers"
         # land_loans_interests: "Intérêts des emprunts fonciers"
         land_parcel_asset: "Land parcel asset"
@@ -136,7 +144,9 @@ eng:
         # little_office_equipment_charges: "Fournitures d'entretien et de petits equipements"
         # livestock_feed_stock: "Stock d'aliment du bétail"
         # locked_associated_accounts: "Associes comptes courants - comptes bloqués"
+        # long_cycle_animals_inventory_variations: "Variations d'inventaires - animaux (cycle long)"
         # long_cycle_cultures_advances: "Avances aux cultures (cycle long)"
+        # long_cycle_vegetals_inventory_variations: "Variations d'inventaires - végétaux (cycle long)"
         # long_term_loans: "Emprunts à moyen et long terme"
         # long_term_loans_interests: "Intérêts des autres emprunts à moyen et long terme"
         long_time_animal_stock: "Long time animal stock"
@@ -157,6 +167,7 @@ eng:
         # others_asset: "Autres immobilisations"
         # others_asset_depreciations: "Ammortissements des autres immobilisations"
         # others_charges: "Divers"
+        # others_compensations: "Autres indemnités d'exploitation"
         # others_consumables_stock: "Stock d'autres consommables"
         # others_incorporeal_asset: "Autres immobilisations incorporelles (Droits de plantation, Quotas)"
         # others_incorporeal_asset_depreciations: "Autres immobilisations incorporelles"
@@ -167,6 +178,7 @@ eng:
         # others_subventions: "Autres subventions d'investissement"
         # others_taxes: "Autres impôts, taxes et versements assimilés"
         # others_usual_running_charges: "Charges diverses de gestion courante"
+        # others_usual_running_profits: "Produits divers de gestion courante"
         # own_building_asset_depreciations: "Ammortissements des constructions sur sol propre"
         # own_building_charges: "Constructions (sur sol propre)"
         # ownership_asset: "Titres immobilisés (droits de propriété)"
@@ -177,21 +189,27 @@ eng:
         # plant_derivatives_products: "Vente de produits végétaux"
         # plant_medicine_stock: "Stock de produits de défense des végétaux"
         # principal_associated_accounts: "Associes comptes courants - principal"
+        # products_inventory_variations: "Variations d'inventaires - produits"
         # products_specials_taxes: "Taxes spécifiques sur les produits de l'exploitation"
         # professional_agricultural_organization_asset: "Participations à des organismes professionnels agricoles"
         # professionnals_subscriptions_charges: "Cotisations professionnelles"
         raw_material_charge: "Raw material charge" #?
         # raw_material_charges: "Matières premières"
+        # reductions: "Escomptes obtenus"
         # reevaluation_gaps: "Ecart de réévaluation"
         # reserves: "Réserves"
+        # sales_assets_products: "Produits des ventes d'immobilisations"
         # seed_stock: "Stock de semences et plants"
         service_animal_asset: "Service animal asset"
         # service_animal_asset_depreciations: "Ammortissements des animaux de services"
+        # share_asset_subsidies: "Quote-part des subventions d'investissement virée au resultat de l'exercice"
+        # short_cycle_animals_inventory_variations: "Variations d'inventaires - animaux (cycle court)"
         # short_cycle_cultures_advances: "Avances aux cultures (cycle court)"
         # short_cycle_cultures_advances_culturals_ways: "Avances aux cultures (cycle court) - Façons culturales"
         # short_cycle_cultures_advances_fertilizers: "Avances aux cultures (cycle court) - Engrais et ammendement"
         # short_cycle_cultures_advances_plants_medicines: "Avances aux cultures (cycle court) - Produits de défense des végétaux"
         # short_cycle_cultures_advances_seeds: "Avances aux cultures (cycle court) - Semences et plants"
+        # short_cycle_vegetals_inventory_variations: "Variations d'inventaires - végétaux (cycle court)"
         # short_term_loans: "Emprunts à court terme"
         # short_term_loans_interests: "Intérêts des emprunts à court terme"
         short_time_animal_stock: "Short time animal stock"
@@ -205,6 +223,7 @@ eng:
         # stocks: "Comptes de stocks et en-cours"
         # stocks_variation: "Variation de stocks"
         # studies_and_research_charges: "Etudes et recherches"
+        # subsidies: "Subventions d'exploitation"
         # suppliers: "Fournisseurs"
         # suppliers_balance_after_compensation: "Fournisseurs d'exploitation - soldes apres compensation"
         # suppliers_invoices_not_received: "Fournisseurs - factures non parvenues"
