Enhances Account::get and cleans code

--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -198,7 +198,7 @@ arb:
         # grain: "Grain"
         # land_parcel: "Parcelle"
         # male_adult_cow: "Taureau"
-        # male_young_cow: "Génisse"
+        # male_young_cow: "Taurillon"
         # milk: "Lait"
         # straw: "Paille"
         # tractor: "Tracteur"
