finalize Account nomenclature, making seed and demo task passed.

--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -60,6 +60,7 @@ fra:
       name: "Compétences"
     accounts:
       attributes:
+        debtor: "Compte de débit"
         fr_pcg82: "Plan comptable général de 1982 - Arrêté du 14/12/2007"
         fr_pcga: "Plan comptable agricole - Arrêté du 11/12/1986"
       items:
@@ -73,7 +74,10 @@ fra:
         agricultural_disasters_compensations: "Indémnités du fonds national de garantie des calamités agricoles"
         animal_derivative_stock: "Produits finis animaux"
         animal_derivatives_products: "Vente de produits animaux"
+        animal_medicine_matter_charges: "Produits de défense des animaux"
         animal_medicine_stock: "Stock de produits de défense des animaux"
+        animal_products: "Ventes d'animaux"
+        animal_reproduction_matter_charges: "Produits de reproduction animale"
         animal_reproduction_stock: "Stock de produits de reproduction animale"
         animals_productions_charges: "Achats pour productions animales"
         asset_depreciations: "Ammortissements"
@@ -82,6 +86,8 @@ fra:
         assets_values: "Valeurs comptables des élèments d'actif cédés "
         associates_salary: "Rémunérations (administrateurs, gérants, associés)"
         attorney: "Autres comptes debiteurs ou crediteurs"
+        bank: "Banque"
+        banks: "Banques, établissements financiers et assimilés"
         banks_services_charges: "Services bancaires"
         biocorporeal_asset_depreciations: "Ammortissements des biens vivants"
         building_asset: "Bâtiments"
@@ -108,6 +114,7 @@ fra:
         exploitation_charges_transfers: "Transferts de charges d'exploitation"
         exploitation_subsidies_and_compensations: "Indémnités et subventions d'exploitation"
         external_staff_charges: "Personnel exterieur a l'entreprise"
+        fertilizer_charges: "Engrais et amendements"
         fertilizer_stock: "Stock d'engrais et amendements"
         fill_up_price_products: "Compléments de prix et primes sur produits vendus"
         financial_year_result: "Résultat de l'exercice"
@@ -115,16 +122,18 @@ fra:
         financial_year_result_loss: "Résultat de l'exercice (perte)"
         financial_year_result_profit: "Résultat de l'exercice (bénéfice)"
         financials_products: "Produits financiers"
+        fuel_matter_charges: "Carburants et lubrifiants"
         fuel_stock: "Stock de carburants et lubrifiants"
         fuels_charges: "Carburants et lubrifiants"
         gas_charges: "Gaz"
-        general_installation_asset: "Installations générales"
+        general_installation_asset: "Installations générales. Agencements, aménagements des constructions"
         general_installation_asset_depreciations: "Ammortissements des installations"
         home_consumption_production: "Production autoconsommée"
         incorporeal_asset_depreciations: "Ammortissements des immobilisations incorporelles"
         industrial_cooperative_participation_asset: "SICA"
         initial_individual_capital: "Capital individuel initial"
         initial_individual_capital_variations: "Variation du capital individuel initial"
+        initial_society_capital: "Capital sociétaire initial"
         installation_sustainable_plant_asset: "Aménagements des plantations pérennes"
         insurance_charges: "Primes d'assurance"
         internal_transfer: "Virement interne"
@@ -137,6 +146,7 @@ fra:
         land_parcel_sell_products: "Immobilisations corporelles (hors biens vivants)"
         legal_reserves: "Réserve légale"
         little_office_equipment_charges: "Fournitures d'entretien et de petits equipements"
+        livestock_feed_matter_charges: "Aliments du betail"
         livestock_feed_stock: "Stock d'aliment du bétail"
         locked_associated_accounts: "Associes comptes courants - comptes bloqués"
         long_cycle_animals_inventory_variations: "Variations d'inventaires - animaux (cycle long)"
@@ -151,11 +161,15 @@ fra:
         office_equipment_asset_depreciations: "Ammortissements des équipements de bureau"
         office_furniture_asset: "Mobilier"
         office_furniture_asset_depreciations: "Ammortissements du mobilier"
+        office_supply_matter_charges: "Fournitures de bureau"
         other_animal_charges: "Autres animaux"
         other_animal_products: "Autres animaux"
         other_building_asset_depreciations: "Ammortissements des constructions sur sol d'autrui"
         other_building_charges: "Constructions (sur sol d'autrui)"
+        other_consumable_matter_charges: "Autres fournitures consommables"
+        other_corporeal_asset_depreciations: "Ammortissements des autres immobilisations corporelles"
         other_fees_charges: "Autres honoraires"
+        other_general_installation_asset: "Installations générales. Autres"
         other_supply_stocks_variation: "Variation des stocks autres approvisionnements"
         others_asset: "Autres immobilisations"
         others_asset_depreciations: "Ammortissements des autres immobilisations"
@@ -165,10 +179,11 @@ fra:
         others_incorporeal_asset: "Autres immobilisations incorporelles (Droits de plantation, Quotas)"
         others_incorporeal_asset_depreciations: "Autres immobilisations incorporelles"
         others_interests_charges: "Autres charges d'intérêts"
+        others_investment_subventions: "Autres subventions d'investissement"
+        others_investment_subventions_in_earnings_statement: "Autres subventions d'investissement inscrites au compte de résultat"
         others_professional_agricultural_participation_asset: "Autres participations à des OPA"
         others_reserves: "Autres réserves"
         others_staff_charges: "Autres Charges de personnel"
-        others_subventions: "Autres subventions d'investissement"
         others_taxes: "Autres impôts, taxes et versements assimilés"
         others_usual_running_charges: "Charges diverses de gestion courante"
         others_usual_running_profits: "Produits divers de gestion courante"
@@ -177,8 +192,10 @@ fra:
         ownership_asset: "Titres immobilisés (droits de propriété)"
         ownership_loan: "Prêts consentis"
         paid_taxes: "Taxes sur le chiffre d'affaires deductibles"
+        pending_deposit_payments: "Valeurs à l'encaissement "
         plant_derivative_stock: "Stock de produits finis végétaux"
         plant_derivatives_products: "Vente de produits végétaux"
+        plant_medicine_matter_charges: "Produits de défense des végétaux"
         plant_medicine_stock: "Stock de produits de défense des végétaux"
         principal_associated_accounts: "Associes comptes courants - principal"
         products_inventory_variations: "Variations d'inventaires - produits"
@@ -190,6 +207,7 @@ fra:
         reevaluation_gaps: "Ecart de réévaluation"
         reserves: "Réserves"
         sales_assets_products: "Produits des ventes d'immobilisations"
+        seed_charges: "Semences et plants"
         seed_stock: "Stock de semences et plants"
         service_animal_asset: "Animaux de service"
         service_animal_asset_depreciations: "Ammortissements des animaux de services"
@@ -409,14 +427,14 @@ fra:
         salmo: "Salmonidés"
         sus: "Porcins"
       name: "Animaux"
-    varieties-triticum_aestivum:
-      items:
-        caphorn: "Caphorn"
-      name: "Blé tendre"
     varieties-equipment:
       items:
         tractor: "Tracteur"
       name: "Equipements"
+    varieties-triticum_aestivum:
+      items:
+        caphorn: "Caphorn"
+      name: "Blé tendre"
   procedures:
     animal_birth: "Naissance d’un animal"
     calving_one: "Vêlage unique"
