--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -66,7 +66,7 @@ eng:
         fr_pcga: "Fr pcga"
       items:
         # accrued_bank_interests: "Intérêts courus"
-        # accrued_interest: "Intérêts courus"
+        # accrued_interests: "Intérêts courus"
         # accrued_interests_on_bank: "Intérêts courus auprès des établissements de crédit"
         adult_animal_asset: "Adult animal asset" #?
         # adult_animal_asset_depreciations: "Ammortissements des animaux reproducteurs"
@@ -90,7 +90,7 @@ eng:
         # assets_suppliers: "Fournisseurs d'immobilisations"
         # assets_values: "Valeurs comptables des élèments d'actif cédés "
         # associates_salary: "Rémunérations (administrateurs, gérants, associés)"
-        # attorney: "Autres comptes debiteurs ou crediteurs"
+        # attorneys: "Autres comptes débiteurs ou créditeurs"
         # banks: "Banques"
         # banks_and_similar: "Banques, établissements financiers et assimilés"
         # banks_services_expenses: "Services bancaires"
@@ -99,6 +99,7 @@ eng:
         # building_assets: "Bâtiments"
         # campaigns_interests: "Crédits des crédits bancaires de campagne"
         # capital: "Capital"
+        # capitals: "Comptes de capitaux"
         # cash: "Caisse"
         # clients: "Clients"
         # collected_taxes: "Taxes sur le chiffre d'affaires collectées par l'entreprise"
@@ -110,6 +111,7 @@ eng:
         # depreciations_inputations_expenses: "Dotations aux amortissements et aux provisions"
         # discount_from_cooperatives: "Ristournes percues des cooperatives agricoles"
         # electricity_expenses: "Electricité"
+        # end_products_stock: "Stock de produits finis et intermédiaires"
         # end_revenues_stock: "Stock de produits finis"
         equipment_asset: "Equipment asset" #?
         # equipment_asset_depreciations: "Ammortissements des installations techniques, matériels et outillage"
@@ -119,12 +121,14 @@ eng:
         equipment_rent_charge: "Equipment rent charge" #?
         # equipment_rent_expenses: "Location de matériel"
         # equipment_subventions: "Subventions d'équipement"
+        # expenses: "Comptes de charges"
         # exploitation_expenses_transfers: "Transferts de expenses d'exploitation"
         # exploitation_subsidies_and_compensations: "Indémnités et subventions d'exploitation"
         # external_staff_expenses: "Personnel exterieur a l'entreprise"
         # fertilizer_expenses: "Engrais et amendements"
         # fertilizer_stock: "Stock d'engrais et amendements"
         # fill_up_price_revenues: "Compléments de prix et primes sur produits vendus"
+        # finances: "Comptes financiers"
         # financial_year_result: "Résultat de l'exercice"
         # financial_year_result_balance: "Résultat de l'exercice (bénéfice ou perte)"
         # financial_year_result_loss: "Résultat de l'exercice (perte)"
@@ -144,7 +148,7 @@ eng:
         # initial_society_capital: "Capital sociétaire initial"
         # installation_sustainable_plant_assets: "Aménagements des plantations pérennes"
         # insurance_expenses: "Primes d'assurance"
-        # internal_transfer: "Virement interne"
+        # internal_transfers: "Virements internes"
         # inventory_variations: "Variations d'inventaires"
         # land_loans: "Emprunts fonciers"
         # land_loans_interests: "Intérêts des emprunts fonciers"
@@ -222,6 +226,7 @@ eng:
         # reductions: "Escomptes obtenus"
         # reevaluation_gaps: "Ecart de réévaluation"
         # reserves: "Réserves"
+        # revenues: "Comptes de produits"
         # sales_assets_revenues: "Produits des ventes d'immobilisations"
         # seed_expenses: "Semences et plants"
         # seed_stock: "Stock de semences et plants"
@@ -386,6 +391,8 @@ eng:
         building: "Building"
         # building_division: "Pièce ou zone d'un bâtiment"
         calf: "Calf"
+        # cattle_herd: "Troupeau de bovins"
+        # chemical_fertilizer: "Engrais chimique"
         # corn_crop: "Culture de maïs"
         # cultivable_land_parcel: "Parcelle culturale"
         # durum_wheat_crop: "Culture de blé dur"
@@ -396,6 +403,7 @@ eng:
         # female_young_cow: "Génisse"
         # fungicide: "Fongicide"
         grain: "Grain"
+        # grass: "Herbe"
         # hay: "Foin"
         # herbicide: "Herbicide"
         # insecticide: "Insecticide"
@@ -403,8 +411,10 @@ eng:
         # land_parcel_cluster: "Ilôt"
         # male_adult_cow: "Taureau"
         # male_young_cow: "Taurillon"
+        # manager: "Responsable"
         # manure: "Fumier"
         milk: "Milk"
+        # mineral_cleaner: "Nettoyant chimique"
         # mineral_fertilizer: "Engrais minéral"
         # office_building: "Bureau"
         # organic_fertilizer: "Engrais organique"
@@ -413,9 +423,11 @@ eng:
         # silage: "Ensilage"
         # small_equipment: "Petit matériel"
         # sorghum_crop: "Culture de sorgho"
+        # spelt_wheat_crop: "Culture d'épeautre"
         # spread_renting: "Location de semoir"
         straw: "Straw"
         # sunflower_crop: "Culture de tournesol"
+        # technician: "Technicien"
         # temporary_meadow_crop: "Culture de prairie temporaire"
         tractor: "Tractor"
         trail: "Trail"
